fix: 修改 SceneEnum 中的 ScreenAgent 替换为 SceneAgent 并调整字段与逻辑